# mnist

./: .gitignore  Dockerfile  MANIFEST.IN  README.md  ml-work-cronjob  pyproject.toml  run.sh  rundb.sh
note/: code.ipynb  keras.ipynb  mnist240924.keras  mnist984.keras
src/mnist/: .db.py.swp  .main.py.swp  db.py  main.py  mnist240924.keras:Zone.Identifier  worker.py
